--- a/customize.yaml
+++ b/customize.yaml
@@ -1,11 +1,21 @@
 light.olohuonejalkalamppu:
   friendly_name: Living room floor lamp
+  homebridge_name: Floor
 light.olohuonepallo:
   friendly_name: Living room table lamp
+  homebridge_name: Table
 light.musa:
+  hidden: true
+  emulated_hue: false
+  homebridge_hidden: true
+switch.musa:
   friendly_name: Music system
   icon: mdi:speaker
 light.tietokone:
+  hidden: true
+  emulated_hue: false
+  homebridge_hidden: true
+switch.tietokone:
   friendly_name: PC
   icon: mdi:desktop-tower
 light.katto:
@@ -16,13 +26,28 @@ light.ruokapoyta:
   emulated_hue: false
 group.all_automations:
   emulated_hue: false
+  homebridge_hidden: true
 group.all_lights:
   emulated_hue: false
-group.devices:
+  homebridge_hidden: true
+group.all_scripts:
   emulated_hue: false
+  homebridge_hidden: true
+group.all_switches:
+  emulated_hue: false
+  homebridge_hidden: true
+group.livingroom:
+  homebridge_hidden: true
 media_player.sony_bravia_tv:
   emulated_hue_name: TV
+  homebridge_hidden: true
+switch.sony_bravia_tv:
+  emulated_hue: false
+  homebridge_name: TV
+  icon: mdi:television
 automation.tv_on:
   hidden: true
 automation.tv_off:
   hidden: true
+script.turn_on_apple_tv:
+  emulated_hue: true
