--- a/configuration.yaml
+++ b/configuration.yaml
@@ -46,10 +46,7 @@ history:
 # View all events in a logbook
 logbook:
 
-logger:
-#  default: critical
-#  logs:
-#    homeassistant.components.enocean: debug
+#logger:
 
 # Track the sun
 #sun:
@@ -90,28 +87,30 @@ tradfri:
   host: 10.0.1.11
   api_key: !secret api_key
   allow_tradfri_groups: false
-
 switch:
+  - platform: flux
+    lights:
+      - light.jalkalamppu
+      - light.pallo
+      - light.katto
+      - light.ruokapoyta
+    name: Fluxer
+    start_time: '7:00'
+    stop_time: '19:00'
+    start_colortemp: 4000
+    sunset_colortemp: 2200
+    stop_colortemp: 2200
+    brightness: 200
+    disable_brightness_adjust: True
+    mode: mired
+  - platform: tplink
+    host: 10.0.1.9
+    name: musa
+  - platform: tplink
+    host: 10.0.1.13
+    name: tietokone
   - platform: template
     switches:
-      musa:
-        value_template: "{{ is_state('light.musa', 'on') }}"
-        turn_on:
-          service: light.turn_on
-          entity_id: light.musa
-        turn_off:
-          service: light.turn_off
-          entity_id: light.musa
-        entity_id: light.musa
-      tietokone:
-        value_template: "{{ is_state('light.tietokone', 'on') }}"
-        turn_on:
-          service: light.turn_on
-          entity_id: light.tietokone
-        turn_off:
-          service: light.turn_off
-          entity_id: light.tietokone
-        entity_id: light.tietokone
       sony_bravia_tv:
         friendly_name: TV
         value_template: "{{ is_state('media_player.sony_bravia_tv', 'on') }}"
