--- a/automations.yaml
+++ b/automations.yaml
@@ -4,7 +4,7 @@
     platform: state
     entity_id: media_player.sony_bravia_tv
   action:
-    service_template: "{% if is_state(trigger.to_state.state, 'off') %} switch.turn_off {% else %}  switch.turn_on {%endif %}"
+    service_template: "{% if (trigger.to_state.state == 'on') %} switch.turn_on {% else %}  switch.turn_off {%endif %}"
     data_template:
       entity_id: "switch.musa"
 
