--- a/automations.yaml
+++ b/automations.yaml
@@ -48,14 +48,10 @@
       entity_id: "switch.tietokone"
 
 - alias: Flux jalkalamppu
-  hide_entity: true
+  hide_entity: false
   trigger:
     - platform: time
-      at: '7:00:00'
-    - platform: time
-      at: '16:00:00'
-    - platform: time
-      at: '20:00:00'
+      seconds: '/30'
     - platform: state
       entity_id: light.jalkalamppu
       from: 'off'
@@ -68,18 +64,30 @@
     service: light.turn_on
     data_template:
       entity_id: "light.jalkalamppu"
-      brightness: "{% if now().hour < 7 %} 150 {% elif now().hour < 16 %} 255 {% elif now().hour < 20 %}255 {% else %} 150 {% endif %}"
-      kelvin: "{% if now().hour < 7 %} 2200 {% elif now().hour < 16 %} 4000 {% elif now().hour < 18 %} 2700 {% else %} 2200 {% endif %}"
+      brightness: >
+        {% if now().hour < 6 %}
+          150
+        {% elif now().hour < 16 %}
+          255
+        {% else %}
+          {{ ((255 - 150) * (1 - ((now().hour + now().minute/60.0) - 16.0) / 8.0) + 150) | int }}
+        {% endif %}
+      kelvin: >
+        {% if now().hour < 6 %}
+          2200
+        {% elif now().hour < 16 %}
+          4000
+        {% elif now().hour < 18 %}
+          2700
+        {% else %}
+          2200
+        {% endif %}
 
 - alias: Flux pallo
-  hide_entity: true
+  hide_entity: false
   trigger:
     - platform: time
-      at: '7:00:00'
-    - platform: time
-      at: '16:00:00'
-    - platform: time
-      at: '20:00:00'
+      seconds: '/30'
     - platform: state
       entity_id: light.pallo
       from: 'off'
@@ -92,11 +100,27 @@
     service: light.turn_on
     data_template:
       entity_id: "light.pallo"
-      brightness: "{% if now().hour < 7 %} 150 {% elif now().hour < 16 %} 255 {% elif now().hour < 20 %}255 {% else %} 150 {% endif %}"
-      kelvin: "{% if now().hour < 7 %} 2200 {% elif now().hour < 16 %} 4000 {% elif now().hour < 18 %} 2700 {% else %} 2200 {% endif %}"
+      brightness: >
+        {% if now().hour < 6 %}
+          150
+        {% elif now().hour < 16 %}
+          255
+        {% else %}
+          {{ ((255 - 150) * (1 - ((now().hour + now().minute/60.0) - 16.0) / 8.0) + 150) | int }}
+        {% endif %}
+      kelvin: >
+        {% if now().hour < 6 %}
+          2200
+        {% elif now().hour < 16 %}
+          4000
+        {% elif now().hour < 18 %}
+          2700
+        {% else %}
+          2200
+        {% endif %}
 
 - alias: Flux ruokapoyta
-  hide_entity: true
+  hide_entity: false
   trigger:
     - platform: time
       seconds: '/30'
@@ -112,11 +136,27 @@
     service: light.turn_on
     data_template:
       entity_id: "light.ruokapoyta"
-      brightness: "{% if now().hour < 7 %} 150 {% elif now().hour < 16 %} 255 {% elif now().hour < 20 %} 255 {% else %} 150 {% endif %}"
-      kelvin: "{% if now().hour < 7 %} 2200 {% elif now().hour < 16 %} 4000 {% elif now().hour < 18 %} 2700 {% else %} 2200 {% endif %}"
+      brightness: >
+        {% if now().hour < 6 %}
+          150
+        {% elif now().hour < 16 %}
+          255
+        {% else %}
+          {{ ((255 - 150) * (1 - ((now().hour + now().minute/60.0) - 16.0) / 8.0) + 150) | int }}
+        {% endif %}
+      kelvin: >
+        {% if now().hour < 6 %}
+          2200
+        {% elif now().hour < 16 %}
+          4000
+        {% elif now().hour < 18 %}
+          2700
+        {% else %}
+          2200
+        {% endif %}
 
 - alias: Flux katto
-  hide_entity: true
+  hide_entity: false
   trigger:
     - platform: time
       seconds: '/30'
@@ -132,5 +172,21 @@
     service: light.turn_on
     data_template:
       entity_id: "light.katto"
-      brightness: "{% if now().hour < 7 %} 50 {% elif now().hour < 16 %} 255 {% elif now().hour < 20 %}150 {% else %} 50 {% endif %}"
-      kelvin: "{% if now().hour < 7 %} 2200 {% elif now().hour < 16 %} 4000 {% elif now().hour < 18 %} 2700 {% else %} 2200 {% endif %}"
+      brightness: >
+        {% if now().hour < 6 %}
+          50
+        {% elif now().hour < 16 %}
+          255
+        {% else %}
+          {{ ((255 - 50) * (1 - ((now().hour + now().minute/60.0) - 16.0) / 8.0) + 50) | int }}
+        {% endif %}
+      kelvin: >
+        {% if now().hour < 6 %}
+          2200
+        {% elif now().hour < 16 %}
+          4000
+        {% elif now().hour < 18 %}
+          2700
+        {% else %}
+          2200
+        {% endif %}
