--- a/configuration.yaml
+++ b/configuration.yaml
@@ -71,6 +71,8 @@ emulated_hue:
 media_player:
   - platform: braviatv
     host: 10.0.1.23
+  - platform: yamaha_musiccast
+    host: 10.0.1.15
 
 enocean:
   device: /dev/ttyAMA0
@@ -94,15 +96,3 @@ switch:
   - platform: tplink
     host: 10.0.1.13
     name: tietokone
-  - platform: template
-    switches:
-      sony_bravia_tv:
-        friendly_name: TV
-        value_template: "{{ is_state('media_player.sony_bravia_tv', 'on') }}"
-        turn_on:
-          service: media_player.turn_on
-          entity_id: media_player.sony_bravia_tv
-        turn_off:
-          service: media_player.turn_off
-          entity_id: media_player.sony_bravia_tv
-        entity_id: media_player.sony_bravia_tv
