--- a/configuration.yaml
+++ b/configuration.yaml
@@ -46,6 +46,10 @@ history:
 # View all events in a logbook
 logbook:
 
+recorder:
+  purge_interval: 2
+  purge_keep_days: 5
+
 #logger:
 
 # Track the sun
