--- a/configuration.yaml
+++ b/configuration.yaml
@@ -32,23 +32,23 @@ http:
 # the developers to assist with development of Home Assistant.
 # For more information, please see:
 # https://home-assistant.io/blog/2016/10/25/explaining-the-updater/
-updater:
+#updater:
 
 # Discover some devices automatically
 #discovery:
 
 # Allows you to issue voice commands from the frontend in enabled browsers
-conversation:
+#conversation:
 
 # Enables support for tracking state changes over time.
-history:
+#history:
 
 # View all events in a logbook
-logbook:
+#logbook:
 
-recorder:
-  purge_interval: 2
-  purge_keep_days: 5
+#recorder:
+#  purge_interval: 2
+#  purge_keep_days: 5
 
 #logger:
 
@@ -76,7 +76,7 @@ media_player:
   - platform: braviatv
     host: 10.0.1.23
   - platform: yamaha_musiccast
-    host: 10.0.1.15
+    host: 10.0.1.4
 
 enocean:
   device: /dev/ttyAMA0
@@ -91,7 +91,6 @@ binary_sensor:
 
 tradfri:
   host: 10.0.1.11
-  api_key: !secret api_key
   allow_tradfri_groups: false
 switch:
   - platform: tplink
